--- a/src/app/views/login/login.component.html
+++ b/src/app/views/login/login.component.html
@@ -7,8 +7,8 @@
             <div class="card p-4">
               <div class="card-body">
                 <form>
-                  <h1>Login</h1>
-                  <p class="text-muted">Sign In to your account</p>
+                  <h1>Đăng nhập</h1>
+                  <p class="text-muted">Nhập tài khoản của bạn</p>
                   <div class="input-group mb-3">
                     <div class="input-group-prepend">
                       <span class="input-group-text"><i class="icon-user"></i></span>
@@ -23,10 +23,10 @@
                   </div>
                   <div class="row">
                     <div class="col-6">
-                      <button type="button" class="btn btn-primary px-4" (click)="doLogin()">Login</button>
+                      <button type="button" class="btn btn-primary px-4" (click)="doLogin()">Đăng nhập</button>
                     </div>
                     <div class="col-6 text-right">
-                      <button type="button" class="btn btn-link px-0">Forgot password?</button>
+                      <button type="button" class="btn btn-link px-0">Quên mật khẩu?</button>
                     </div>
                   </div>
                 </form>
@@ -35,9 +35,9 @@
             <div class="card text-white bg-primary py-5 d-md-down-none" style="width:44%">
               <div class="card-body text-center">
                 <div>
-                  <h2>Sign up</h2>
+                  <h2>Đăng ký</h2>
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                  <button type="button" class="btn btn-primary active mt-3">Register Now!</button>
+                  <button type="button" class="btn btn-primary active mt-3">Đăng ký ngay bây giờ!</button>
                 </div>
               </div>
             </div>
