--- a/src/app/containers/default-layout/default-layout.component.html
+++ b/src/app/containers/default-layout/default-layout.component.html
@@ -31,19 +31,19 @@
         <img src="assets/img/avatars/9.jpg" class="img-avatar" alt="admin@bootstrapmaster.com"/>
       </a>
       <div class="dropdown-menu dropdown-menu-right" *dropdownMenu aria-labelledby="simple-dropdown">
-        <div class="dropdown-header text-center"><strong>Account</strong></div>
-        <a class="dropdown-item" href="#"><i class="fa fa-bell-o"></i> Updates<span class="badge badge-info">42</span></a>
-        <a class="dropdown-item" href="#"><i class="fa fa-envelope-o"></i> Messages<span class="badge badge-success">42</span></a>
-        <a class="dropdown-item" href="#"><i class="fa fa-tasks"></i> Tasks<span class="badge badge-danger">42</span></a>
-        <a class="dropdown-item" href="#"><i class="fa fa-comments"></i> Comment<span class="badge badge-warning">42</span></a>
-        <div class="dropdown-header text-center"><strong>Settings</strong></div>
-        <a class="dropdown-item" href="#"><i class="fa fa-user"></i> Profile</a>
-        <a class="dropdown-item" href="#"><i class="fa fa-wrench"></i> Setting</a>
-        <a class="dropdown-item" href="#"><i class="fa fa-usd"></i> Payments<span class="badge badge-dark">42</span></a>
-        <a class="dropdown-item" href="#"><i class="fa fa-file"></i> Projects<span class="badge badge-primary">42</span></a>
+        <div class="dropdown-header text-center"><strong>Tài khoản</strong></div>
+        <a class="dropdown-item" href="#"><i class="fa fa-bell-o"></i> Cập nhật<span class="badge badge-info">15</span></a>
+        <a class="dropdown-item" href="#"><i class="fa fa-envelope-o"></i> Tin nhắn<span class="badge badge-success">12</span></a>
+        <a class="dropdown-item" href="#"><i class="fa fa-tasks"></i> Công việc<span class="badge badge-danger">2</span></a>
+        <a class="dropdown-item" href="#"><i class="fa fa-comments"></i> Bình luận<span class="badge badge-warning">42</span></a>
+        <div class="dropdown-header text-center"><strong>Cài đặt</strong></div>
+        <a class="dropdown-item" href="#"><i class="fa fa-user"></i> Hồ sơ</a>
+        <a class="dropdown-item" href="#"><i class="fa fa-wrench"></i> Cài đặt</a>
+        <a class="dropdown-item" href="#"><i class="fa fa-usd"></i> Thanh toán<span class="badge badge-dark">1</span></a>
+        <a class="dropdown-item" href="#"><i class="fa fa-file"></i> Chủ đề<span class="badge badge-primary">2</span></a>
         <div class="divider"></div>
-        <a class="dropdown-item" href="#"><i class="fa fa-shield"></i> Lock account</a>
-        <a class="dropdown-item" href="#/login"><i class="fa fa-lock"></i> Logout</a>
+        <a class="dropdown-item" href="#"><i class="fa fa-shield"></i> Khóa tài khoản</a>
+        <a class="dropdown-item" href="#/login"><i class="fa fa-lock"></i> Đăng xuất</a>
       </div>
     </li>
   </ul>
