--- a/src/app/views/base/progress.component.html
+++ b/src/app/views/base/progress.component.html
@@ -41,7 +41,7 @@
                     <i class="icon-clock icons font-xl d-block mt-4"> {{i.date}}</i>
                   </div>
                   <div class="col-2">
-                    <button class="btn btn-primary"><i class="fa fa-download"></i>Tải xuống</button>
+                    <button class="btn btn-primary" (click)="download()"><i class="fa fa-download"></i>Tải xuống</button>
                     <button class="btn btn-success" [ngStyle]="style"><i class="fa fa-edit"></i>Chỉnh sửa</button>
                     <button class="btn btn-dark" [ngStyle]="style"><i class="fa fa-remove"></i> Xóa</button>
                   </div>
