--- a/src/app/views/base/tabs.component.html
+++ b/src/app/views/base/tabs.component.html
@@ -9,7 +9,8 @@
           <div class="row">
             <div class="col-12">
               <div class="form-group">
-                <input type="text" class="form-control" id="name" placeholder="Nhập từ khóa" name="word" [(ngModel)]="keyword">
+                <input type="text" class="form-control" id="name" placeholder="Nhập từ khóa" name="word"
+                  [(ngModel)]="keyword">
               </div>
             </div>
           </div>
@@ -27,7 +28,7 @@
           <strong>Tìm kiếm gần đây</strong>
         </div>
         <div class="card-body">
-          <div *ngFor="let i of data">
+          <div *ngFor="let i of resultpagi">
             <div class="row">
               <div class="col-12">
                 <div class="row card-file">
@@ -41,7 +42,8 @@
                     <i class="icon-clock icons font-xl d-block mt-4"> {{i.date}}</i>
                   </div>
                   <div class="col-2">
-                    <button class="btn btn-primary" (click)="download()"><i class="fa fa-download"></i>Tải xuống</button>
+                    <button class="btn btn-primary" (click)="download()"><i class="fa fa-download"></i>Tải
+                      xuống</button>
                     <button class="btn btn-success" [ngStyle]="style"><i class="fa fa-edit"></i>Chỉnh sửa</button>
                     <button class="btn btn-dark" [ngStyle]="style"><i class="fa fa-remove"></i> Xóa</button>
                   </div>
@@ -51,18 +53,23 @@
             <hr>
           </div>
         </div>
-        <nav style="padding-left: 40%">
-          <ul class="pagination">
-            <li class="page-item"><a class="page-link" href="#">Prev</a></li>
-            <li class="page-item active">
-              <a class="page-link" href="#">1</a>
-            </li>
-            <li class="page-item"><a class="page-link" href="#">2</a></li>
-            <li class="page-item"><a class="page-link" href="#">3</a></li>
-            <li class="page-item"><a class="page-link" href="#">4</a></li>
-            <li class="page-item"><a class="page-link" href="#">Next</a></li>
-          </ul>
-        </nav>
+        <div *ngIf="resultpagi.length > 0">
+          <nav style="padding-left: 40%">
+            <ul class="pagination">
+              <li class="page-item"><a class="page-link" href="#">Prev</a></li>
+              <li class="page-item active">
+                <a class="page-link" href="#">1</a>
+              </li>
+              <li class="page-item"><a class="page-link" href="#/base/tabs?page=2">2</a></li>
+              <li class="page-item"><a class="page-link" href="#/base/tabs?page=3">3</a></li>
+              <li class="page-item"><a class="page-link" href="#/base/tabs?page=4">4</a></li>
+              <li class="page-item"><a class="page-link" href="#/base/tabs?page=5">Next</a></li>
+            </ul>
+          </nav>
+        </div>
+        <div *ngIf="resultpagi.length === 0">
+          <p style="text-align: center">Không tìm thấy !!!</p>
+        </div>
       </div>
     </div>
   </div>
